--- a/lesson 17 (13)/index.html
+++ b/lesson 17 (13)/index.html
@@ -70,6 +70,9 @@
       <article>
         <li class="news__list"></li>
       </article>
+      <article>
+        <button class="news__button"></button>
+      </article>
     </section>
   </main>
   <footer class="footer">
